style: fix logo position on smaller screens

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,6 +3,7 @@ header {
     top: 0px;
     height: 90px;
     width: 100%;
+    padding: var(--spacing-small) var(--spacing-large);
 
     display: flex;
     align-items: center;
@@ -22,7 +23,6 @@ header {
 
     nav {
         width: 100%;
-        padding: 0 var(--spacing-large);
 
         display: flex;
         justify-content: space-between;
@@ -117,7 +117,6 @@ header {
     header {
 
         .logo {
-            position: static;
             left: var(--spacing-medium);
             transform: translateX(0);
         }
